# provider-variant-x86-64

./: .gitmodules  LICENSE  README.md  pyproject.toml
provider_variant_x86_64/: __init__.py  archspec_utils.py  plugin.py
tests/: test_plugin.py
variant_x86_64/: __init__.py  plugin.py
