[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "variant_x86_64"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "archspec",
    "variantlib",
]

[project.urls]
Home = "https://github.com/wheelnext/x86_64-plugin/"
